--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "express": "^4.21.2",
-    "rimraf": "^6.0.1"
+    "prom-client": "^15.1.3",
+    "rimraf": "^6.0.1",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0",
+    "winston-mongodb": "^7.0.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
