--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "scripts": {
     "dev": "ts-node src/index.ts",
     "build": "rimraf dist/ && tsc --noEmitOnError --pretty  --extendedDiagnostics",
+    "test": "npx jest",
     "start": "node dist/index.js",
     "prisma:generate": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "dotenv-safe": "^9.1.0",
+    "env-var": "^7.5.0",
     "express": "^4.21.2",
     "prom-client": "^15.1.3",
     "rimraf": "^6.0.1",
@@ -18,8 +21,12 @@
     "winston-mongodb": "^7.0.1"
   },
   "devDependencies": {
+    "@types/dotenv-safe": "^8.1.6",
     "@types/express": "^5.0.3",
+    "@types/jest": "^30.0.0",
+    "jest": "^30.1.1",
     "prisma": "^5.0.0",
+    "ts-jest": "^29.4.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
