--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "rimraf": "^6.0.1",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
+    "winston-loki": "^6.1.3",
     "winston-mongodb": "^7.0.1"
   },
   "devDependencies": {
