--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "cors": "^2.8.5",
     "dotenv-safe": "^9.1.0",
     "env-var": "^7.5.0",
     "express": "^4.21.2",
+    "morgan": "^1.10.1",
     "prom-client": "^15.1.3",
     "rimraf": "^6.0.1",
     "winston": "^3.17.0",
@@ -22,9 +24,11 @@
     "winston-mongodb": "^7.0.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/dotenv-safe": "^8.1.6",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
+    "@types/morgan": "^1.9.10",
     "jest": "^30.1.1",
     "prisma": "^5.0.0",
     "ts-jest": "^29.4.1",
