--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       mailhog:
         condition: service_started
     environment:
-      DATABASE_URL: "mongodb://${MONGO_USER}:${MONGO_PASSWORD}@mongo:27017/${MONGO_DB}?authSource=admin"
+      DATABASE_URL: "mongodb://${MONGO_USER}:${MONGO_PASSWORD}@mongo:27017/${MONGO_DB}?replicaSet=rs0&authSource=admin"
     ports:
       - "${PORT:-3000}:3000"
     networks:
@@ -27,22 +27,28 @@ services:
     image: mongo:6.0-jammy
     container_name: mongo
     restart: always
-    command: ["mongod", "--bind_ip_all"]
+    entrypoint: ["/scripts/start-mongo.sh"]
+    # command: ["mongod", "--bind_ip_all", "--replSet", "rs0", "--keyFile", "/mongo-keyfile", "--auth"]
     environment:
-      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USER}
-      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}
-      MONGO_INITDB_DATABASE: ${MONGO_DB}
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USER:-admin}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD:-securepassword}
+      MONGO_INITDB_DATABASE: ${MONGO_DB:-admin}
     volumes:
+      - ./mongo-keyfile:/mongo-keyfile
+      - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
+      - ./scripts/start-mongo.sh:/scripts/start-mongo.sh:ro
       - mongo_data:/data/db
     ports:
       - "27017:27017"
     networks:
       - backend_network
     healthcheck:
-      test: ["CMD", "mongosh", "--quiet", "--eval", "db.adminCommand('ping')"]
-      interval: 60s
-      timeout: 30s
-      retries: 5
+      test: ["CMD", "mongosh", "-u", "${MONGO_USER:-admin}", "-p", "${MONGO_PASSWORD:-securepassword}", "--authenticationDatabase", "admin", "--eval", "rs.status().ok || rs.initiate({_id:'rs0',members:[{_id:0,host:'mongo:27017'}]}).ok"]
+      # test: ["CMD", "mongosh", "-u", "${MONGO_USER:-admin}", "-p", "${MONGO_PASSWORD:-securepassword}", "--authenticationDatabase", "admin", "--eval", "db.adminCommand('ping')"]
+      # test: ["CMD", "mongosh", "-u", "${MONGO_USER}", "-p", "${MONGO_PASSWORD}", "--authenticationDatabase", "admin", "--quiet", "--eval", "rs.status().ok || (rs.initiate({\"_id\": \"rs0\", \"members\": [{\"_id\": 0, \"host\": \"mongo:27017\"}]}).ok && sleep 5 && rs.status().ok)"]
+      interval: 10s
+      timeout: 10s
+      retries: 10
       start_period: 30s
     labels:
       - "prometheus.scrape=true"
