--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
-    "dev": "ts-node src/index.ts",
+    "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/index.ts",
     "build": "rimraf dist/ && tsc --noEmitOnError --pretty  --extendedDiagnostics",
     "test": "npx jest",
-    "start": "node dist/index.js",
+    "start": "node -r module-alias/register dist/index.js",
     "prisma:generate": "prisma generate"
   },
   "dependencies": {
@@ -15,6 +15,7 @@
     "dotenv-safe": "^9.1.0",
     "env-var": "^7.5.0",
     "express": "^4.21.2",
+    "module-alias": "^2.2.3",
     "morgan": "^1.10.1",
     "prom-client": "^15.1.3",
     "rimraf": "^6.0.1",
@@ -22,6 +23,15 @@
     "winston-daily-rotate-file": "^5.0.0",
     "winston-loki": "^6.1.3",
     "winston-mongodb": "^7.0.1"
+  },
+  "_moduleAliases": {
+    "@": "dist",
+    "@config": "dist/config",
+    "@services": "dist/services",
+    "@middlewares": "dist/middlewares",
+    "@router": "dist/router",
+    "@utils": "dist/utils",
+    "@controllers": "dist/controllers"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
@@ -33,6 +43,8 @@
     "prisma": "^5.0.0",
     "ts-jest": "^29.4.1",
     "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2"
   }
 }
