--- a/package.json
+++ b/package.json
@@ -6,19 +6,28 @@
     "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/index.ts",
     "build": "rimraf dist/ && tsc --noEmitOnError --pretty  --extendedDiagnostics",
     "test": "npx jest",
+    "test:docs": "swagger-cli validate src/docs/openapi.yaml",
     "start": "node -r module-alias/register dist/index.js",
     "prisma:generate": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
+    "chalk": "^5.6.0",
+    "chalk-animation": "^2.0.3",
     "cors": "^2.8.5",
     "dotenv-safe": "^9.1.0",
     "env-var": "^7.5.0",
     "express": "^4.21.2",
+    "figlet": "^1.8.2",
+    "gradient-string": "^3.0.0",
     "module-alias": "^2.2.3",
     "morgan": "^1.10.1",
     "prom-client": "^15.1.3",
     "rimraf": "^6.0.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
     "winston-loki": "^6.1.3",
@@ -34,9 +43,11 @@
     "@controllers": "dist/controllers"
   },
   "devDependencies": {
+    "@types/chalk": "^0.4.31",
     "@types/cors": "^2.8.19",
     "@types/dotenv-safe": "^8.1.6",
     "@types/express": "^5.0.3",
+    "@types/figlet": "^1.7.0",
     "@types/jest": "^30.0.0",
     "@types/morgan": "^1.9.10",
     "jest": "^30.1.1",
