--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "test": "npx jest",
     "test:docs": "swagger-cli validate src/docs/openapi.yaml",
     "start": "node -r module-alias/register dist/index.js",
-    "prisma:generate": "prisma generate"
+    "prisma:generate": "prisma generate",
+    "generate:openapi": "npx swagger-jsdoc -d ./docs/openapi.config.js -o ./docs/openapi.yaml"
   },
   "dependencies": {
+    "@bull-board/api": "^6.12.7",
+    "@bull-board/express": "^6.12.7",
     "@prisma/client": "^5.22.0",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
@@ -31,7 +34,8 @@
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
     "winston-loki": "^6.1.3",
-    "winston-mongodb": "^7.0.1"
+    "winston-mongodb": "^7.0.1",
+    "yamljs": "^0.3.0"
   },
   "_moduleAliases": {
     "@": "dist",
@@ -50,6 +54,7 @@
     "@types/figlet": "^1.7.0",
     "@types/jest": "^30.0.0",
     "@types/morgan": "^1.9.10",
+    "@types/yamljs": "^0.2.34",
     "jest": "^30.1.1",
     "prisma": "^5.0.0",
     "ts-jest": "^29.4.1",
