--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,17 @@
 PORT=3000
 NODE_ENV=development
 
+DB_TYPE=mongodb
+APP_NAME=BACKEND-API
+APP_DESCRIPTION="Full backend architecture"
+APP_AUTHOR="Barthez Kenwou"
+APP_VERSION=1.0.0
+APP_LICENSE=MIT
+
 DEFAULT_API_PREFIX=/api/v1
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
-
+DISABLE_CONSOLE_LOGS=true
 
 DATABASE_URL="mongodb://admin:secret123@mongo:27017/appDB?authSource=admin"
 
@@ -28,3 +35,18 @@ SMTP_PORT=1025
 SMTP_USER=smtp_user
 SMTP_PASS=smtp_password
 
+HSTS_MAX_AGE=31536000
+
+CLIENT_URL=http://localhost:5173
+
+# jwt
+JWT_SECRET=your_jwt_secret_key
+JWT_EXPIRES_IN=1h
+JWT_COOKIE_SECURITY=true
+JWT_COOKIE_HTTP_STATUS=true
+
+# rate limiting
+MAX_GLOBAL_QUERY_NUMBER=100
+MAX_GLOBAL_QUERY_WINDOW=900000 // 15 minutes
+MAX_UNIQ_QUERY_NUMBER=50
+MAX_UNIQ_QUERY_WINDOW=900000 // 15 minutes
