--- a/package.json
+++ b/package.json
@@ -19,12 +19,17 @@
     "@types/swagger-ui-express": "^4.1.8",
     "chalk": "^5.6.0",
     "chalk-animation": "^2.0.3",
+    "compression": "^1.8.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "dotenv-safe": "^9.1.0",
     "env-var": "^7.5.0",
     "express": "^4.21.2",
+    "express-rate-limit": "^8.0.1",
     "figlet": "^1.8.2",
     "gradient-string": "^3.0.0",
+    "helmet": "^8.1.0",
     "module-alias": "^2.2.3",
     "morgan": "^1.10.1",
     "prom-client": "^15.1.3",
@@ -48,7 +53,10 @@
   },
   "devDependencies": {
     "@types/chalk": "^0.4.31",
+    "@types/compression": "^1.8.1",
+    "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
+    "@types/csurf": "^1.11.5",
     "@types/dotenv-safe": "^8.1.6",
     "@types/express": "^5.0.3",
     "@types/figlet": "^1.7.0",
