--- a/package.json
+++ b/package.json
@@ -6,23 +6,20 @@
     "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/index.ts",
     "build": "rimraf dist/ && tsc --noEmitOnError --pretty  --extendedDiagnostics",
     "start": "node -r module-alias/register dist/index.js",
-    
     "test": "jest --passWithNoTests",
     "test:docs": "swagger-cli validate src/docs/openapi.yaml",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "validate": "npm run lint && npm run type-check && npm test",
-    
     "prisma:generate": "prisma generate",
     "generate:openapi": "npx swagger-jsdoc -d ./docs/openapi.config.js -o ./docs/openapi.yaml",
     "postinstall": "npm run generate:openapi && npm run prisma:generate",
-    
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx --max-warnings=5",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,mdx,yml,yaml}\"",
     "lint:fix": "npm run lint -- --fix",
     "type-check": "tsc --noEmit",
-    
     "prepare": "husky install",
+    "ci": "echo 'CI=true'",
     "precommit": "lint-staged"
   },
   "dependencies": {
@@ -50,6 +47,7 @@
     "rimraf": "^6.0.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
+    "vitest": "^3.2.4",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
     "winston-loki": "^6.1.3",
@@ -75,7 +73,10 @@
     "@types/express": "^5.0.3",
     "@types/figlet": "^1.7.0",
     "@types/jest": "^30.0.0",
+    "@types/k6": "^1.2.0",
     "@types/morgan": "^1.9.10",
+    "@types/node": "^24.3.0",
+    "@types/supertest": "^6.0.3",
     "@types/yamljs": "^0.2.34",
     "@typescript-eslint/eslint-plugin": "^8.41.0",
     "@typescript-eslint/parser": "^8.41.0",
@@ -91,8 +92,10 @@
     "eslint-plugin-unicorn": "^60.0.0",
     "eslint-plugin-unused-imports": "^4.2.0",
     "jest": "^30.1.1",
+    "k6": "^0.0.0",
     "prettier": "^3.6.2",
     "prisma": "^5.0.0",
+    "supertest": "^7.1.4",
     "ts-jest": "^29.4.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
