--- a/package.json
+++ b/package.json
@@ -55,6 +55,12 @@
     "winston-mongodb": "^7.0.1",
     "yamljs": "^0.3.0"
   },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
+  },
   "_moduleAliases": {
     "@": "dist",
     "@config": "dist/config",
@@ -96,6 +102,7 @@
     "eslint-plugin-sonarjs": "^3.0.5",
     "eslint-plugin-unicorn": "^60.0.0",
     "eslint-plugin-unused-imports": "^4.2.0",
+    "husky": "^9.1.7",
     "jest": "^30.1.1",
     "k6": "^0.0.0",
     "prettier": "^3.6.2",
@@ -106,5 +113,10 @@
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
