--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,21 +13,21 @@ services:
       mailhog:
         condition: service_started
     environment:
-      DATABASE_URL: "mongodb://${MONGO_USER}:${MONGO_PASSWORD}@mongo:27017/${MONGO_DB}?replicaSet=rs0&authSource=admin"
+      DATABASE_URL: 'mongodb://${MONGO_USER}:${MONGO_PASSWORD}@mongo:27017/${MONGO_DB}?replicaSet=rs0&authSource=admin'
     ports:
-      - "${PORT:-3000}:3000"
+      - '${PORT:-3000}:3000'
     networks:
       - backend_network
     labels:
-      - "prometheus.scrape=true"
-      - "prometheus.port=3000"
-      - "prometheus.path=/metrics"
+      - 'prometheus.scrape=true'
+      - 'prometheus.port=3000'
+      - 'prometheus.path=/metrics'
 
   mongo:
     image: mongo:6.0-jammy
     container_name: mongo
     restart: always
-    entrypoint: ["/scripts/start-mongo.sh"]
+    entrypoint: ['/scripts/start-mongo.sh']
     # command: ["mongod", "--bind_ip_all", "--replSet", "rs0", "--keyFile", "/mongo-keyfile", "--auth"]
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_USER:-admin}
@@ -39,36 +39,48 @@ services:
       - mongo_data:/data/db
       # - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
     ports:
-      - "27017:27017"
+      - '27017:27017'
     networks:
       - backend_network
     healthcheck:
-      test: ["CMD", "mongosh", "-u", "${MONGO_USER:-admin}", "-p", "${MONGO_PASSWORD:-securepassword}", "--authenticationDatabase", "admin", "--eval", "rs.status().ok || rs.initiate({_id:'rs0',members:[{_id:0,host:'mongo:27017'}]}).ok"]
+      test:
+        [
+          'CMD',
+          'mongosh',
+          '-u',
+          '${MONGO_USER:-admin}',
+          '-p',
+          '${MONGO_PASSWORD:-securepassword}',
+          '--authenticationDatabase',
+          'admin',
+          '--eval',
+          "rs.status().ok || rs.initiate({_id:'rs0',members:[{_id:0,host:'mongo:27017'}]}).ok",
+        ]
       interval: 10s
       timeout: 10s
       retries: 10
       start_period: 90s
     labels:
-      - "prometheus.scrape=true"
-      - "prometheus.port=9216"
-    
+      - 'prometheus.scrape=true'
+      - 'prometheus.port=9216'
+
   redis:
     image: redis:8-alpine
     container_name: redis
     restart: always
-    command: ["redis-server", "--appendonly", "yes"]
+    command: ['redis-server', '--appendonly', 'yes']
     ports:
-      - "6379:6379"
+      - '6379:6379'
     networks:
       - backend_network
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
+      test: ['CMD', 'redis-cli', 'ping']
       interval: 30s
       timeout: 10s
       retries: 5
     labels:
-      - "prometheus.scrape=true"
-      - "prometheus.port=9121"
+      - 'prometheus.scrape=true'
+      - 'prometheus.port=9121'
 
   minio:
     image: minio/minio
@@ -79,27 +91,27 @@ services:
       MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
     command: server /data --console-address ":9001"
     ports:
-      - "9011:9000"
-      - "9001:9001"
+      - '9011:9000'
+      - '9001:9001'
     volumes:
       - minio_data:/data
     networks:
       - backend_network
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/ready"]
+      test: ['CMD', 'curl', '-f', 'http://localhost:9000/minio/health/ready']
       interval: 30s
       timeout: 10s
       retries: 5
     labels:
-      - "prometheus.scrape=true"
-      - "prometheus.port=9000"
+      - 'prometheus.scrape=true'
+      - 'prometheus.port=9000'
 
   mailhog:
     image: mailhog/mailhog
     container_name: mailhog
     ports:
-      - "1025:1025" # SMTP
-      - "8025:8025" # Web UI
+      - '1025:1025' # SMTP
+      - '8025:8025' # Web UI
     networks:
       - backend_network
 
@@ -111,8 +123,8 @@ services:
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
     ports:
-      - "80:80"
-      - "443:443"
+      - '80:80'
+      - '443:443'
     networks:
       - backend_network
 
