--- a/docs/schemas/item.yaml
+++ b/docs/schemas/item.yaml
@@ -13,7 +13,7 @@ properties:
     minLength: 2
     maxLength: 100
     description: Nom de l'item
-    example: "Item exemple"
+    example: 'Item exemple'
   value:
     type: number
     format: double
@@ -23,9 +23,9 @@ properties:
     type: string
     format: date-time
     description: Date de création
-    example: "2025-08-30T20:57:52.000Z"
+    example: '2025-08-30T20:57:52.000Z'
   updatedAt:
     type: string
     format: date-time
     description: Date de dernière mise à jour
-    example: "2025-08-30T20:57:52.000Z"
+    example: '2025-08-30T20:57:52.000Z'
