--- a/monitoring/grafana/datasources/prometheus.yml
+++ b/monitoring/grafana/datasources/prometheus.yml
@@ -4,20 +4,20 @@ apiVersion: 1
 datasources:
   # --- DataSource Prometheus ---
   - name: Prometheus
-    type: prometheus          
+    type: prometheus
     url: http://prometheus:9090
-    access: proxy            
-    isDefault: true          
-    jsonData:                
-      timeInterval: "5s"     
-      httpMethod: "POST"     
-    editable: true           
+    access: proxy
+    isDefault: true
+    jsonData:
+      timeInterval: '5s'
+      httpMethod: 'POST'
+    editable: true
 
   # --- DataSource Loki ---
   - name: Loki
-    type: loki               
-    url: http://loki:3100    
-    access: proxy            
+    type: loki
+    url: http://loki:3100
+    access: proxy
     jsonData:
-      maxLines: 1000         
-    editable: true           
+      maxLines: 1000
+    editable: true
