--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "prisma:generate": "prisma generate",
     "generate:openapi": "npx swagger-jsdoc -d ./docs/openapi.config.js -o ./docs/openapi.yaml",
     "postinstall": "npm run generate:openapi && npm run prisma:generate",
-    "lint": "eslint . --ext .ts,.tsx,.js,.jsx --max-warnings=5",
+    "lint": "eslint . --ext .ts,.tsx,.js,.jsx --max-warnings=10",
     "lint:fix": "npm run lint -- --fix",
+    "lint:ci": "eslint . --ext .ts,.tsx,.js,.jsx --max-warnings=0",
     "lint:md": "markdownlint-cli2 **/*.md",
     "lint:md:fix": "markdownlint-cli2 --fix '**/*.md'",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,cjs,json,md,mdx,yml,yaml}\"",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,mjs,json,md,mdx,yml,yaml}\"",
     "format:check": "prettier --check .",
     "type-check": "tsc --noEmit",
     "prepare": "husky install",
