--- a/package.json
+++ b/package.json
@@ -27,6 +27,16 @@
     "ci": "echo 'CI=true'",
     "precommit": "lint-staged"
   },
+  "lint-staged": {
+    "*.{ts,tsx,js,json,md,yml,yaml}": [
+      "npm run type-check",
+      "npm run format",
+      "npm run lint"
+    ],
+    "*.{md,mdx}": [
+      "npm run lind:md:fix"
+    ]
+  },
   "dependencies": {
     "@bull-board/api": "^6.12.7",
     "@bull-board/express": "^6.12.7",
@@ -58,15 +68,6 @@
     "winston-loki": "^6.1.3",
     "winston-mongodb": "^7.0.1",
     "yamljs": "^0.3.0"
-  },
-  "lint-staged": {
-    "*.{ts,tsx,js,json,md,yml,yaml}": [
-      "npm run format",
-      "npm run lint"
-    ],
-    "*.{md,mdx}": [
-      "npm run lind:md:fix"
-    ]
   },
   "_moduleAliases": {
     "@": "dist",
