--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "prisma:generate": "prisma generate",
     "generate:openapi": "npx swagger-jsdoc -d ./docs/openapi.config.js -o ./docs/openapi.yaml",
     "postinstall": "npm run generate:openapi && npm run prisma:generate",
-    "lint": "eslint . --ext .ts,.tsx,.js,.jsx --max-warnings=10",
-    "lint:fix": "npm run lint -- --fix",
+    "lint": "npm run lint:check -- --fix",
+    "lint:check": "eslint . --ext .ts,.tsx,.js,.jsx --max-warnings=10",
     "lint:ci": "eslint . --ext .ts,.tsx,.js,.jsx --max-warnings=0",
-    "lint:md": "markdownlint-cli2 **/*.md",
-    "lint:md:fix": "markdownlint-cli2 --fix '**/*.md'",
+    "lint:md": "markdownlint-cli2 --fix '**/*.md'",
+    "lint:md:check": "markdownlint-cli2 **/*.md",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,mjs,json,md,mdx,yml,yaml}\"",
     "format:check": "prettier --check .",
     "type-check": "tsc --noEmit",
@@ -32,8 +32,9 @@
       "npm run format",
       "npm run lint"
     ],
+    "!commitlint.config.js": [],
     "*.{md,mdx}": [
-      "npm run lind:md:fix"
+      "npm run lind:md"
     ]
   },
   "dependencies": {
