--- a/package.json
+++ b/package.json
@@ -41,10 +41,13 @@
     "@bull-board/api": "^6.12.7",
     "@bull-board/express": "^6.12.7",
     "@prisma/client": "^5.22.0",
+    "@types/otp-generator": "^4.0.2",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
+    "bcrypt": "^6.0.0",
     "chalk": "^5.6.0",
     "chalk-animation": "^2.0.3",
+    "clamscan": "^2.4.0",
     "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -56,8 +59,12 @@
     "figlet": "^1.8.2",
     "gradient-string": "^3.0.0",
     "helmet": "^8.1.0",
+    "mime-types": "^3.0.1",
+    "minio": "^8.0.5",
     "module-alias": "^2.2.3",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
+    "otp-generator": "^4.0.1",
     "prom-client": "^15.1.3",
     "rimraf": "^6.0.1",
     "swagger-jsdoc": "^6.2.8",
@@ -82,6 +89,7 @@
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@types/bcrypt": "^6.0.0",
     "@types/chalk": "^0.4.31",
     "@types/compression": "^1.8.1",
     "@types/cookie-parser": "^1.4.9",
@@ -92,7 +100,9 @@
     "@types/figlet": "^1.7.0",
     "@types/jest": "^30.0.0",
     "@types/k6": "^1.2.0",
+    "@types/mime-types": "^3.0.1",
     "@types/morgan": "^1.9.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.3.0",
     "@types/supertest": "^6.0.3",
     "@types/yamljs": "^0.2.34",
