--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
     "dotenv-safe": "^9.1.0",
+    "ejs": "^3.1.10",
     "env-var": "^7.5.0",
     "express": "^4.21.2",
     "express-rate-limit": "^8.0.1",
@@ -64,6 +65,7 @@
     "module-alias": "^2.2.3",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.6",
     "otp-generator": "^4.0.1",
     "prom-client": "^15.1.3",
     "rimraf": "^6.0.1",
@@ -96,6 +98,7 @@
     "@types/cors": "^2.8.19",
     "@types/csurf": "^1.11.5",
     "@types/dotenv-safe": "^8.1.6",
+    "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.3",
     "@types/figlet": "^1.7.0",
     "@types/jest": "^30.0.0",
@@ -104,6 +107,7 @@
     "@types/morgan": "^1.9.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.3.0",
+    "@types/nodemailer": "^7.0.1",
     "@types/supertest": "^6.0.3",
     "@types/yamljs": "^0.2.34",
     "@typescript-eslint/eslint-plugin": "^8.41.0",
