feat: init user setting: routes & controllers

--- a/.env.example
+++ b/.env.example
@@ -20,10 +20,16 @@ DATABASE_URL="mongodb://admin:secret123@mongo:27017/appDB?authSource=admin"
 MONGO_USER=admin
 MONGO_PASSWORD=secret123
 MONGO_DB=appDB
+MONGO_PORT=27017
 
 # MinIO
-MINIO_ROOT_USER=minioadmin
-MINIO_ROOT_PASSWORD=minio123
+MINIO_ACCESS_KEY=minioadmin
+MINIO_SECRET_KEY=minio123
+MINIO_PORT=9000
+MINIO_CONSOLE=9001
+MINIO_ENDPOINT=localhost
+MINIO_APP_BUCKET=my-app-uploads
+MINIO_BASE_PATH=uploads/
 
 # Redis
 REDIS_HOST=redis
@@ -34,10 +40,12 @@ SMTP_HOST=mailhog
 SMTP_PORT=1025
 SMTP_USER=smtp_user
 SMTP_PASS=smtp_password
+USER_EMAIL=kenwoubarthez@gmail.com
 
 HSTS_MAX_AGE=31536000
 
 CLIENT_URL=http://localhost:5173
+CORS_ORIGIN=http://localhost:5173
 
 # jwt
 JWT_SECRET=your_jwt_secret_key
@@ -47,6 +55,33 @@ JWT_COOKIE_HTTP_STATUS=true
 
 # rate limiting
 MAX_GLOBAL_QUERY_NUMBER=100
-MAX_GLOBAL_QUERY_WINDOW=900000 // 15 minutes
+MAX_GLOBAL_QUERY_WINDOW=900000 # 15 minutes
 MAX_UNIQ_QUERY_NUMBER=50
-MAX_UNIQ_QUERY_WINDOW=900000 // 15 minutes
+MAX_UNIQ_QUERY_WINDOW=900000 # 15 minutes
+
+# Logging
+LOKI_ENABLED=false
+
+# Csurf
+ALLOW_CSRF_PROTECTION=false
+CSRF_COOKIE_NAME=XSRF-TOKEN
+CSRF_HEADER_NAME=X-XSRF-TOKEN
+CSRF_EXPIRES_IN=2h
+
+# Cookies
+COOKIE_DOMAIN=localhost
+COOKIE_SECURE=true
+COOKIE_HTTP_STATUS=true
+COOKIE_SAME_SITE=strict
+COOKIE_EXPIRES_IN=2
+
+# Swagger
+SWAGGER_ENABLED=true
+SWAGGER_USER=admin
+SWAGGER_PASSWORD=admin
+
+# CSP Reporting
+CSP_REPORT_URI=/security/csp-violation
+
+# OTP
+OTP_DELAY=900000 # 15 minutes
