--- a/package.json
+++ b/package.json
@@ -51,12 +51,13 @@
     "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "csurf": "^1.11.0",
+    "csurf": "^1.2.2",
     "dotenv-safe": "^9.1.0",
     "ejs": "^3.1.10",
     "env-var": "^7.5.0",
     "express": "^4.21.2",
     "express-rate-limit": "^8.0.1",
+    "express-validator": "^7.2.1",
     "figlet": "^1.8.2",
     "gradient-string": "^3.0.0",
     "helmet": "^8.1.0",
@@ -100,10 +101,12 @@
     "@types/dotenv-safe": "^8.1.6",
     "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.3",
+    "@types/express-validator": "^2.20.33",
     "@types/figlet": "^1.7.0",
     "@types/jest": "^30.0.0",
     "@types/k6": "^1.2.0",
     "@types/mime-types": "^3.0.1",
+    "@types/minio": "^7.1.0",
     "@types/morgan": "^1.9.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.3.0",
@@ -112,8 +115,8 @@
     "@types/yamljs": "^0.2.34",
     "@typescript-eslint/eslint-plugin": "^8.41.0",
     "@typescript-eslint/parser": "^8.41.0",
-    "commitizen": "^4.3.1",
-    "cz-conventional-changelog": "^3.3.0",
+    "commitizen": "^3.0.0",
+    "cz-conventional-changelog": "^3.0.1",
     "eslint": "^9.34.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
