--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   backend:
     build: .
-    container_name: backend
+    container_name: ${APP_NAME:-backend_api}
     env_file: .env
     depends_on:
       mongo:
@@ -20,15 +20,14 @@ services:
       - backend_network
     labels:
       - 'prometheus.scrape=true'
-      - 'prometheus.port=3000'
+      - 'prometheus.port=${PORT:-3000}'
       - 'prometheus.path=/metrics'
 
   mongo:
     image: mongo:6.0-jammy
-    container_name: mongo
+    container_name: ${MONGO_NAME:-mongo_db}
     restart: always
     entrypoint: ['/scripts/start-mongo.sh']
-    # command: ["mongod", "--bind_ip_all", "--replSet", "rs0", "--keyFile", "/mongo-keyfile", "--auth"]
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_USER:-admin}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD:-securepassword}
@@ -37,9 +36,8 @@ services:
       - ./mongo-keyfile:/mongo-keyfile:ro
       - ./scripts/start-mongo.sh:/scripts/start-mongo.sh:ro
       - mongo_data:/data/db
-      # - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
     ports:
-      - '27017:27017'
+      - '${MONGO_PORT:-27017}:27017'
     networks:
       - backend_network
     healthcheck:
@@ -66,11 +64,11 @@ services:
 
   redis:
     image: redis:8-alpine
-    container_name: redis
+    container_name: ${REDIS_NAME:-redis_cache}
     restart: always
     command: ['redis-server', '--appendonly', 'yes']
     ports:
-      - '6379:6379'
+      - '${REDIS_PORT:-6379}:6379'
     networks:
       - backend_network
     healthcheck:
@@ -84,15 +82,15 @@ services:
 
   minio:
     image: minio/minio
-    container_name: minio
+    container_name: ${MINIO_NAME:-minio_storage}
     restart: always
     environment:
-      MINIO_ROOT_USER: ${MINIO_ROOT_USER}
-      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
+      MINIO_ROOT_USER: ${MINIO_ACCESS_KEY}
+      MINIO_ROOT_PASSWORD: ${MINIO_SECRET_KEY}
     command: server /data --console-address ":9001"
     ports:
-      - '9011:9000'
-      - '9001:9001'
+      - '${MINIO_PORT:-9000}:9000'
+      - '${MINIO_CONSOLE:-9001}:9001'
     volumes:
       - minio_data:/data
     networks:
@@ -104,27 +102,27 @@ services:
       retries: 5
     labels:
       - 'prometheus.scrape=true'
-      - 'prometheus.port=9000'
+      - 'prometheus.port=${MINIO_PORT:-9000}'
 
   mailhog:
     image: mailhog/mailhog
-    container_name: mailhog
+    container_name: ${SMTP_NAME:-mail}
     ports:
-      - '1025:1025' # SMTP
-      - '8025:8025' # Web UI
+      - '${SMTP_PORT:-1025}:1025' # SMTP
+      - '${SMTP_WEB_UI:-8025}:8025' # Web UI
     networks:
       - backend_network
 
   nginx:
     image: nginx:stable-alpine
-    container_name: nginx
+    container_name: ${NGINX_NAME:-nginx}
     depends_on:
       - backend
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
     ports:
-      - '80:80'
-      - '443:443'
+      - '${NGINX_PORT:-80}:80'
+      - '${NGINX_SSH:-443}:443'
     networks:
       - backend_network
 
