--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "bcrypt": "^6.0.0",
     "chalk": "^5.6.0",
     "chalk-animation": "^2.0.3",
+    "clamdjs": "^1.0.2",
     "clamscan": "^2.4.0",
     "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
