--- a/monitoring/clamav/clamd.conf
+++ b/monitoring/clamav/clamd.conf
@@ -4,12 +4,16 @@ LocalSocket /var/run/clamav/clamd.ctl
 FixStaleSocket true
 LocalSocketMode 666
 
-# Configuration du scan
-MaxThreads 4
+# Activer l'écoute TCP
+TCPSocket 3310
+TCPAddr 0.0.0.0
 MaxConnectionQueueLength 30
-StreamMaxLength 100M
 StreamMinPort 49152
 StreamMaxPort 65535
+
+# Configuration du scan
+MaxThreads 4
+StreamMaxLength 100M
 MaxFileSize 50M
 MaxRecursion 16
 MaxFiles 10000
@@ -18,8 +22,6 @@ MaxHTMLNormalize 10M
 MaxHTMLNoTags 2M
 MaxScriptNormalize 5M
 MaxZipTypeRcg 1M
-
-# Désactiver l'analyse des archives (peut être réactivé si nécessaire)
 ScanArchive true
 
 # Configuration des performances
