--- a/monitoring/clamav/clamd.conf
+++ b/monitoring/clamav/clamd.conf
@@ -7,33 +7,35 @@ LocalSocketMode 666
 # Activer l'écoute TCP
 TCPSocket 3310
 TCPAddr 0.0.0.0
-MaxConnectionQueueLength 30
+MaxConnectionQueueLength 100
 StreamMinPort 49152
 StreamMaxPort 65535
 
 # Configuration du scan
-MaxThreads 4
+MaxThreads 8
+MaxQueue 200
+ReadTimeout 300
 StreamMaxLength 100M
 MaxFileSize 50M
-MaxRecursion 16
-MaxFiles 10000
-MaxEmbeddedPE 10M
+MaxRecursion 10
+MaxFiles 5000
+MaxEmbeddedPE 5M
 MaxHTMLNormalize 10M
 MaxHTMLNoTags 2M
 MaxScriptNormalize 5M
 MaxZipTypeRcg 1M
 ScanArchive true
 
-# Configuration des performances
+# Optimisation des performances
 Bytecode true
 BytecodeSecurity TrustSigned
-BytecodeTimeout 60000
+BytecodeTimeout 30000
 
 # Configuration de la mémoire
-MaxScanSize 100M
+MaxScanSize 50M
 MaxFileSize 50M
-MaxRecursion 16
-MaxFiles 10000
+MaxRecursion 10
+MaxFiles 5000
 
 # Désactiver les signatures inutiles
 ScanPE true
@@ -50,6 +52,11 @@ PhishingSignatures true
 PhishingScanURLs true
 PhishingAlwaysBlockSSLMismatch false
 PhishingAlwaysBlockCloak false
+
+# Optimisation pour les fichiers images
+OLE2BlockMacros false
+ScanPDF false
+ScanSWF false
 
 # Base de données
 DatabaseDirectory /var/lib/clamav
