fix: add validation configuration with express-validation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -105,7 +105,7 @@ services:
 
   minio-init:
     image: minio/mc:latest
-    container_name: minio_initializer
+    container_name: MINIO_INITIALIZER
     depends_on:
       minio:
         condition: service_healthy
@@ -147,39 +147,40 @@ services:
     environment:
       - CLAMAV_NO_CLAMD=false
       - CLAMAV_NO_FRESHCLAMD=false
-      - CLAMD_STARTUP_TIMEOUT=300
-      - CLAMD_STARTUP_SLEEP=30
-      - CLAMD_CONNECT_TIMEOUT=30
-      - CLAMD_STREAM_MAX_LENGTH=50M
+      - CLAMD_STARTUP_TIMEOUT=600
+      - CLAMD_STARTUP_SLEEP=60
+      - CLAMD_CONNECT_TIMEOUT=60
+      - CLAMD_STREAM_MAX_LENGTH=100M
       - FRESHCLAM_CHECKS=4
-      - CLAMD_HOST=0.0.0.0 
-      - CLAMD_EXTRA_ARGS=--foreground --stream-max-ratio=300 --max-queue=100
+      - CLAMD_HOST=0.0.0.0
+      - CLAMD_EXTRA_ARGS=--foreground --stream-max-ratio=300 --max-queue=100 --max-threads=8
       - FRESHCLAM_MOD=3600
+      - FRESHCLAM_ONLYREQUIRED=1
 
     volumes:
       - clamav_data:/var/lib/clamav
       - ./monitoring/clamav/clamd.conf:/etc/clamav/clamd.conf
       - clamav_logs:/var/log/clamav
     ports:
-      - ${CLAMAV_PORT:-3310}
+      - '${CLAMAV_PORT:-3310}:3310'
     networks:
       - backend_network
     healthcheck:
-      test: ["CMD", "clamdscan", "--version"]
+      test: ['CMD', 'clamdscan', '--version']
       interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 60s
-    command: ["sh", "-c", "freshclam --daemon --stdout && clamd --foreground"]
+      timeout: 30s
+      retries: 5
+      start_period: 120s
+    command: ['sh', '-c', 'freshclam --daemon --stdout && clamd --foreground']
     restart: unless-stopped
     deploy:
       resources:
         limits:
-          cpus: '2'
-          memory: 1G
+          cpus: '4'
+          memory: 2G
         reservations:
-          cpus: '0.5'
-          memory: 256M
+          cpus: '1'
+          memory: 512M
 
 volumes:
   mongo_data:
