--- a/monitoring/clamav/clamd.conf
+++ b/monitoring/clamav/clamd.conf
@@ -7,38 +7,54 @@ LocalSocketMode 666
 # Activer l'écoute TCP
 TCPSocket 3310
 TCPAddr 0.0.0.0
-MaxConnectionQueueLength 100
+# Augmenté pour gérer plus de connexions simultanées
+MaxConnectionQueueLength 200
 StreamMinPort 49152
 StreamMaxPort 65535
 
 # Configuration du scan
-MaxThreads 8
-MaxQueue 200
-ReadTimeout 300
+# Augmenté pour un meilleur débit
+MaxThreads 12
+# Augmenté pour gérer plus de requêtes
+MaxQueue 500
+# Augmenté à 10 minutes
+ReadTimeout 600
 StreamMaxLength 100M
-MaxFileSize 50M
-MaxRecursion 10
-MaxFiles 5000
-MaxEmbeddedPE 5M
-MaxHTMLNormalize 10M
-MaxHTMLNoTags 2M
-MaxScriptNormalize 5M
-MaxZipTypeRcg 1M
+# Augmenté à 100MB
+MaxFileSize 100M
+# Augmenté pour les archives profondes
+MaxRecursion 16
+# Augmenté pour les archives avec beaucoup de fichiers
+MaxFiles 10000
+# Augmenté pour les gros exécutables
+MaxEmbeddedPE 10M
+MaxHTMLNormalize 20M
+MaxHTMLNoTags 4M
+MaxScriptNormalize 10M
+# Augmenté pour les archives zip
+MaxZipTypeRcg 2M
 ScanArchive true
 
 # Optimisation des performances
 Bytecode true
 BytecodeSecurity TrustSigned
-BytecodeTimeout 30000
+# Augmenté à 60 secondes
+BytecodeTimeout 60000
 
 # Configuration de la mémoire
-MaxScanSize 50M
-MaxFileSize 50M
-MaxRecursion 10
-MaxFiles 5000
+# Augmenté à 100MB
+MaxScanSize 100M
+# Augmenté à 100MB
+MaxFileSize 100M
+# Augmenté pour les archives profondes
+MaxRecursion 16
+# Augmenté pour les archives avec beaucoup de fichiers
+MaxFiles 10000
 
 # Désactiver les signatures inutiles
 ScanPE true
+ScanELF true
+DetectBrokenExecutables true
 
 # Journalisation
 LogFile /var/log/clamav/clamav.log
@@ -46,6 +62,11 @@ LogClean false
 LogTime true
 LogVerbose true
 Foreground true
+LogRotate true
+LogSyslog false
+LogFacility LOG_LOCAL6
+# Limite la taille des logs
+LogFileMaxSize 10M
 
 # Détection des menaces
 PhishingSignatures true
@@ -57,6 +78,19 @@ PhishingAlwaysBlockCloak false
 OLE2BlockMacros false
 ScanPDF false
 ScanSWF false
+# Désactivé si non nécessaire
+ScanMail false
+ScanOLE2 true
+ScanHTML true
+
+# Optimisation des performances
+AlgorithmicDetection true
+# Utiliser le disque pour les gros fichiers
+ForceToDisk true
+MaxDirectoryRecursion 30
+FollowDirectorySymlinks false
+FollowFileSymlinks false
+CrossFilesystems true
 
 # Base de données
 DatabaseDirectory /var/lib/clamav
