--- a/.env.example
+++ b/.env.example
@@ -73,6 +73,13 @@ JWT_SECRET=your_jwt_secret_key
 JWT_EXPIRES_IN=1h
 JWT_COOKIE_SECURITY=true
 JWT_COOKIE_HTTP_STATUS=true
+JWT_ALGORITHM=RS256
+JWT_ACCESS_EXPIRES_IN=15m
+JWT_REFRESH_EXPIRES_IN=7d
+JWT_PRIVATE_KEY_PATH=src/config/keys/private.key
+JWT_PUBLIC_KEY_PATH=src/config/keys/public.key
+JWT_REFRESH_PRIVATE_KEY_PATH=src/config/keys/refreshPrivate.key
+JWT_REFRESH_PUBLIC_KEY_PATH=src/config/keys/refreshPublic.key
 
 # rate limiting
 MAX_GLOBAL_QUERY_NUMBER=100
