--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "figlet": "^1.8.2",
     "gradient-string": "^3.0.0",
     "helmet": "^8.1.0",
+    "ioredis": "^5.8.1",
     "jsonwebtoken": "^9.0.2",
     "mime-types": "^3.0.1",
     "minio": "^8.0.5",
@@ -105,6 +106,7 @@
     "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.3",
     "@types/figlet": "^1.7.0",
+    "@types/ioredis": "^4.28.10",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/k6": "^1.2.0",
