Update prisma schema & update update user controllers

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test:watch": "test --watch",
     "test:coverage": "test --coverage",
     "validate": "npm run lint && npm run type-check && npm test",
-    "prisma:generate": "prisma generate",
+    "prisma:generate": "npx prisma generate",
+    "prisma:format": "npx prisma format",
     "generate:openapi": "npx swagger-jsdoc -d ./docs/openapi.config.js -o ./docs/openapi.yaml",
     "postinstall": "npm run generate:openapi && npm run prisma:generate",
     "lint": "npm run lint:check -- --fix",
