--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,15 +84,21 @@ services:
       - 'prometheus.port=9121'
 
   redisinsight:
-    image: redislabs/redisinsight:latest
+    image: redis/redisinsight:2.54.0
     container_name: ${REDISINSIGHT_NAME:-redisinsight}
     ports:
-      - '${REDISINSIGHT_PORT:-8001}:8001'
+      - '${REDISINSIGHT_PORT:-8001}:5540'
     restart: unless-stopped
     depends_on:
       - redis
     networks:
       - backend_network
+    volumes:
+      - redisinsight_data:/data
+    environment:
+      - REDIS_HOSTS=local:redis:6379
+      - RIHOST=0.0.0.0
+      - RIPORT=8001
 
   minio:
     image: minio/minio:RELEASE.2023-10-25T06-33-25Z
@@ -201,6 +207,7 @@ volumes:
   minio_data:
   clamav_data:
   clamav_logs:
+  redisinsight_data:
 
 networks:
   backend_network:
