user controller & add OAuth

--- a/.env.example
+++ b/.env.example
@@ -116,3 +116,41 @@ CSP_REPORT_URI=/security/csp-violation
 
 # OTP
 OTP_DELAY=900000 # 15 minutes
+
+# ============================================
+# OAuth2.0 Configuration
+# ============================================
+
+# Google OAuth
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+GOOGLE_REDIRECT_URI=http://localhost:3000/api/v1/auth/oauth/google/callback
+
+# GitHub OAuth
+GITHUB_CLIENT_ID=your_github_client_id
+GITHUB_CLIENT_SECRET=your_github_client_secret
+GITHUB_REDIRECT_URI=http://localhost:3000/api/v1/auth/oauth/github/callback
+
+# Facebook OAuth
+FACEBOOK_CLIENT_ID=your_facebook_app_id
+FACEBOOK_CLIENT_SECRET=your_facebook_app_secret
+FACEBOOK_REDIRECT_URI=http://localhost:3000/api/v1/auth/oauth/facebook/callback
+
+# Instagram OAuth (Basic Display API)
+INSTAGRAM_CLIENT_ID=your_instagram_client_id
+INSTAGRAM_CLIENT_SECRET=your_instagram_client_secret
+INSTAGRAM_REDIRECT_URI=http://localhost:3000/api/v1/auth/oauth/instagram/callback
+
+# Twitter OAuth 2.0
+TWITTER_CLIENT_ID=your_twitter_client_id
+TWITTER_CLIENT_SECRET=your_twitter_client_secret
+TWITTER_REDIRECT_URI=http://localhost:3000/api/v1/auth/oauth/twitter/callback
+
+# LinkedIn OAuth (OpenID Connect)
+LINKEDIN_CLIENT_ID=your_linkedin_client_id
+LINKEDIN_CLIENT_SECRET=your_linkedin_client_secret
+LINKEDIN_REDIRECT_URI=http://localhost:3000/api/v1/auth/oauth/linkedin/callback
+
+# Telegram Bot (for Login Widget)
+TELEGRAM_BOT_TOKEN=your_telegram_bot_token
+TELEGRAM_BOT_USERNAME=your_telegram_bot_username
