--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,10 @@ MONGO_PORT=27017
 REDIS_NAME=BACKEND_CACHE
 REDIS_HOST=redis
 REDIS_PORT=6379
+REDIS_USERNAME=
+REDIS_PASSWORD=
+REDISINSIGHT_NAME=REDISINSIGHT
+REDISINSIGHT_PORT=8002
 
 # MinIO
 MINIO_NAME=BACKEND_STORAGE
@@ -116,6 +120,12 @@ CSP_REPORT_URI=/security/csp-violation
 
 # OTP
 OTP_DELAY=900000 # 15 minutes
+
+# Local Cache
+LOCAL_CACHE_TTL=120000
+LOCAL_CACHE_MAX_ITEMS=100
+COMPRESSION_THRESHOLD=1024
+
 
 # ============================================
 # OAuth2.0 Configuration
